--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,22 @@
-openpyxl
-send2trash
+altgraph==0.17.4
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
+et_xmlfile==2.0.0
+Flask==3.1.1
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+openpyxl==3.1.5
+packaging==25.0
+pefile==2023.2.7
+pluggy==1.6.0
+Pygments==2.19.2
+pyinstaller==6.14.1
+pyinstaller-hooks-contrib==2025.5
+pytest==8.4.1
+pywin32-ctypes==0.2.3
+Send2Trash==1.8.3
+setuptools==80.9.0
+Werkzeug==3.1.3
